# uncertain_turtlebot_navigation

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: execute_navigation_goals.launch  slam_navigation.launch  turtlebot_sim_empty.launch  uncertain_navigation.launch
launch/includes/: move_base.launch.xml
maps/: gaussian_map.yaml  goals  gt_map.xcf  laplace_map.yaml  mcdropout_map.yaml  slam_map.pgm  slam_map.yaml
matlab/: check_occupancy.m  plot_trajectory.m
param/: costmap_common_params.yaml  global_costmap_params_uncertainty.yaml
src/: execute_navigation_goals.cpp
