<package>
  <name>uncertain_turtlebot_navigation</name>
  <version>2.3.7</version>
  <description>A turtlebot navigation simulation in Gazebo using uncertainty maps</description>
  <maintainer email="francesco.verdoja@aalto.fi">Francesco Verdoja</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_navigation</url>
  <url type="repository">https://version.aalto.fi/gitlab/irobotics/uncertain-turtle-navigation</url>
  <url type="bugtracker">https://version.aalto.fi/gitlab/irobotics/uncertain-turtle-navigation/issues</url>
  <author>Francesco Verdoja</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_gazebo</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>

  </export>
</package>
