<package format="2">
  <name>uncertain_turtlebot_navigation</name>
  <version>2.3.7</version>
  <description>A turtlebot navigation simulation in Gazebo using uncertainty maps</description>
  <maintainer email="francesco.verdoja@aalto.fi">Francesco Verdoja</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_navigation</url>
  <url type="repository">https://version.aalto.fi/gitlab/irobotics/uncertain-turtle-navigation</url>
  <url type="bugtracker">https://version.aalto.fi/gitlab/irobotics/uncertain-turtle-navigation/issues</url>
  <author>Francesco Verdoja</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  
  <exec_depend>tf</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>map_server</exec_depend>  
  <exec_depend>turtlebot_bringup</exec_depend>
  <exec_depend>turtlebot_gazebo</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>

  <export>

  </export>
</package>
